# Chat-Real-Time

./: .gitignore  CMakeLists.txt  README.md  TREE.txt  about.md  deployments.md  overview.md  run_chat_app.sh
frontend/: chat.js  index.html  index1.html
include/: chat_server.hpp
src/: chat_server.cpp  main.cpp
static/css/: style.css
